# NekoFetch

./: .env.example  .gitattributes  .gitignore  .recovery-state.json  CHANGELOG.md  Dockerfile  LICENSE  NEKOFETCH_UI_REDESIGN.md  NEKOFETCH_UI_REDESIGN_PART2.md  README.md  alembic.ini  config.yaml  docker-compose.yml  logs-recent.txt  main.py  phases.md  pyproject.toml  render.yaml  requirements.txt  run.bat  script.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_JOURNAL.md  SCRAPER_GUIDE.md  TASKS.md
index_data/: CAPTION_MAP.json  PACK_TREE.html  PACK_TREE.json  PACK_TREE.md
index_data/dumps/: batch_001.json  batch_002.json  batch_003.json  batch_004.json  batch_005.json  batch_006.json  batch_007.json  batch_008.json  batch_009.json  batch_010.json  batch_011.json  batch_012.json  batch_013.json  batch_014.json  batch_015.json  batch_016.json  batch_017.json  batch_018.json  batch_019.json  batch_020.json  batch_021.json  batch_022.json  batch_023.json  batch_024.json  batch_025.json  batch_026.json  batch_027.json  batch_028.json  batch_029.json  batch_030.json  batch_031.json  batch_032.json  batch_033.json  batch_034.json  batch_035.json  batch_036.json  batch_037.json  batch_038.json  batch_039.json  batch_040.json  (+9 more)
migrations/: env.py
migrations/versions/: 20260621_0001_initial.py  20260627_0002_add_franchise_data.py  20260701_0003_add_bot_content_posts.py
playground/: REPORT.md  REPORT_FULL.md  REPORT_NYAA.md  REPORT_TELEGRAM.md  analyze_batches.py  build_pack_tree.py  clear_jobs.py  debug_search.py  dl_naruto.py  download_naruto.py  merge_franchises.py  probe_acutebot.py  probe_anilist.py  probe_card.py  probe_card2.py  probe_card3.py  probe_cc.py  probe_coverage_live.py  probe_dual_live.py  probe_enrich.py  probe_franchise.py  probe_help.py  probe_mainchannel.py  probe_more.py  probe_op.py  probe_tmdb_img.py  probe_verified.py  reset_dbs.py  run_full_test.py  run_nyaa_test.py  run_tests.py  test_ajax_ep.py  test_deeper.py  test_demask.py  test_deobfuscate.py  test_domains.py  test_empty_vrf.py  test_ep_list.py  test_find_o_func.py  test_find_vrf.py  (+15 more)
playground/_analysis/: batch_analysis.json  pack_summary.json
resources/: canonical_names.json
resources/language/: en.json
scripts/: MASTER_ANIME_LIST.md  clear_database.py  clear_downloads.py  crossref_publishable.py  debug_footer.py  diag_anikoto.py  diag_browser.js  diag_kickass.py  extract_old_main.py  fix_all_channel_formatting.py  fix_all_footers.py  fix_folder_footers.py  fix_footer_encoding_and_new_channels.py  fix_info_cards.py  fix_season_blockquotes.py  footer_discovery.py  footer_discovery_v2.py  inspect_channels.py  inspect_old_main.py  make_zip.py  publish_my_little_monster.py  rebrand_all_channels.py  rebrand_targeted.py  rebrand_usernames.py  rebrand_v2.py  republish_clean.py  republish_final.py  republish_main.py  republish_to_new_main.py  retry_floodwait.py  retry_verify_channels.py  test_republish_bot.py  test_republish_format.py  verify_channels.py  verify_footers.py  verify_footers2.py  verify_info_cards.py
src/nekofetch/: __init__.py  __main__.py
src/nekofetch/bots/: force_sub.py  fsm.py  manager.py  middleware.py
src/nekofetch/core/: config.py  constants.py  container.py  exceptions.py  logging.py  parsing.py  security.py  settings_schema.py  timefmt.py
src/nekofetch/domain/: enums.py
src/nekofetch/infrastructure/: scheduler.py
src/nekofetch/localization/: i18n.py  messages.py
src/nekofetch/providers/: __init__.py  acute_bot.py
src/nekofetch/services/: access_service.py  analytics_service.py  auth_service.py  bot_branding.py  bot_content.py  bot_factory.py  bot_management_service.py  bot_naming.py  bot_orchestrator.py  branding_service.py  distribution_service.py  download_service.py  enrichment_service.py  index_channel_service.py  log_channel_service.py  main_channel_service.py  notification_service.py  (+8 more)
tests/: test_anikoto_rank.py  test_bot_content.py  test_bot_naming.py  test_bot_orchestrator.py  test_caption_budget.py  test_config.py  test_distribution_delivery.py  test_download_isolation.py  test_dual_strategy.py  test_dualaudio.py  test_franchise_totals.py  test_log_selfheal.py  test_metadata.py  test_parsing.py  test_permissions.py  test_progress.py  test_security.py  test_source_match.py  test_templates.py  test_website_report.py
thumbnail/: Suzume_Card_Asset_Build_Spec.md  analyze.py  build_thumbnail.py  create_html.py  extract.py  extract4.py  extract_images.py  index.html  inventory.txt  parse2.py  parse3.py  parse_svg.py  thumb.html
(+74 files in other folders)
