[project]
name = "nekofetch"
version = "0.1.0"
description = "Premium, authorized-only content distribution platform for Telegram."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "motor>=3.4.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nekofetch = "nekofetch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nekofetch"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
