[project]
name = "nekofetch"
version = "0.1.0"
description = "Premium, authorized-only content distribution platform for Telegram."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pyrofork>=2.3.0",
    # NOTE: TgCrypto is an optional C-extension speedup (see the "speedups" extra).
    # It is intentionally NOT a hard dependency so installs work without a C compiler
    # (e.g. Windows without MSVC Build Tools). Pyrogram falls back to pure-Python AES.
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "motor>=3.4.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "yt-dlp>=2026.0.0",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
# Native speedup — Rust rewrite of TgCrypto with pre-built wheels for all
# platforms (no C compiler needed). Speeds up Pyrogram's MTProto crypto.
speedups = [
    "TgCryptoX>=1.0.1",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nekofetch = "nekofetch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nekofetch"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
